--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,18 @@ inspector/ios-inspector/ForgeModule/ForgeModule.xcodeproj/xcshareddata
 .DS_Store
 inspector/an-inspector.*
 inspector/ios-inspector.*
+
+inspector/an-inspector/.gradle/
+inspector/an-inspector/.idea/
+inspector/an-inspector/ForgeModule/ForgeModule.iml
+inspector/an-inspector/ForgeModule/build.gradle
+inspector/an-inspector/ForgeModule/build/
+inspector/an-inspector/an-inspector.iml
+inspector/an-inspector/build.gradle
+inspector/an-inspector/build/
+inspector/an-inspector/gradle.properties
+inspector/an-inspector/gradle/
+inspector/an-inspector/gradlew
+inspector/an-inspector/gradlew.bat
+inspector/an-inspector/local.properties
+inspector/an-inspector/settings.gradle
