--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
 	"description": "Set some useful browser configuration options.",
-	"min_platform_version": "v2.2.17",
+	"min_platform_version": "v2.4.2",
 	"namespace": "browsersettings",
-	"platform_version": "v2.2.17",
-	"version": "1.1",
-	"changes": "* Check for Android API level 17 or higher when calling `setAutoplayVideo`"
+	"platform_version": "v2.4.2",
+	"version": "1.2",
+	"changes": "* Support Crosswalk 17.46.448.10"
 }
