--- a/module/manifest.json
+++ b/module/manifest.json
@@ -3,6 +3,6 @@
 	"min_platform_version": "v2.4.4",
 	"namespace": "browsersettings",
 	"platform_version": "v2.4.4",
-	"version": "1.3",
-	"changes": "* Fixed: Setting `auto_play_video` to `true` could cause a crash on startup with Android 4.1 devices."
+	"version": "1.4",
+	"changes": "* Enable file scheme cookies on Android."
 }
