Add new configuration options: enable_background_audio, enable_html5_audio

--- a/module/inspector_config.json
+++ b/module/inspector_config.json
@@ -3,7 +3,9 @@
 		"config": {
 			"media_playback": {
 				"inline_video": true,
-				"autoplay_video": true
+				"autoplay_video": true,
+				"enable_background_audio": true,
+				"enable_html5_audio": true
 			},
 			"accept_cookies": true
 		}
