--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
 	"description": "Set some useful browser configuration options.",
-	"min_platform_version": "v2.4.4",
+	"min_platform_version": "v2.5.1",
 	"namespace": "browsersettings",
-	"platform_version": "v2.4.4",
-	"version": "1.4",
-	"changes": "* Enable file scheme cookies on Android."
+	"platform_version": "v2.5.1",
+	"version": "1.5",
+	"changes": "* New configuration options: `enable_background_audio`, `enable_html5_audio`"
 }
