New iOS configuration option: respect_playing_audio. Added support for iOS WKWebView.

--- a/module/inspector_config.json
+++ b/module/inspector_config.json
@@ -5,7 +5,8 @@
                 "inline_video": true,
                 "autoplay_video": true,
                 "enable_background_audio": true,
-                "enable_html5_audio": true
+                "enable_html5_audio": true,
+                "respect_playing_audio": false
             },
             "accept_cookies": true
         }
