--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
-	"description": "Set some useful browser configuration options.",
-	"min_platform_version": "v2.5.1",
-	"namespace": "browsersettings",
-	"platform_version": "v2.5.1",
-	"version": "1.5",
-	"changes": "* New configuration options: `enable_background_audio`, `enable_html5_audio`"
+    "description": "Set some useful browser configuration options.",
+    "min_platform_version": "v2.6.3",
+    "namespace": "browsersettings",
+    "platform_version": "v2.6.3",
+    "version": "1.6",
+    "changes": "* New iOS configuration option: `respect_playing_audio`.\n*Added support for iOS WKWebView."
 }
